refactor and fix multiple conversion functions on mixed typed fields across subqueries